# fisheye_examples

./: README.md
fisheye-haskell/: CHANGELOG.md  README.md  fisheye-haskell.cabal  package.yaml  stack.yaml
fisheye-haskell/app/: Main.hs
fisheye-haskell/src/: Lib.hs
fisheye_android/: settings.gradle
fisheye_android/app/: build.gradle
fisheye_android/app/src/androidTest/java/com/example/fisheye/: ExampleInstrumentedTest.java
fisheye_android/app/src/main/java/com/example/fisheye/: FisheyeView.java  MainActivity.java
fisheye_android/app/src/test/java/com/example/fisheye/: ExampleUnitTest.java
fisheye_android/gradle/wrapper/: gradle-wrapper.properties
fisheye_cs/: .gitignore  fisheye_cs.sln
fisheye_cs/fisheye_cs/: MainForm.Designer.cs  MainForm.cs  Program.cs  fisheye_cs.csproj
fisheye_cs/fisheye_cs/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
fisheye_js/: fisheye.js  index.html
fisheye_kotlin/app/: build.gradle
fisheye_kotlin/app/src/androidTest/java/com/example/fisheye/: ExampleInstrumentedTest.kt
fisheye_kotlin/app/src/main/: AndroidManifest.xml
fisheye_kotlin/app/src/main/java/com/example/fisheye/: FisheyeView.kt  MainActivity.kt
fisheye_kotlin/app/src/main/res/values/: strings.xml  themes.xml
fisheye_kotlin/app/src/main/res/values-night/: themes.xml
fisheye_kotlin/app/src/test/java/com/example/fisheye/: ExampleUnitTest.kt
fisheye_kotlin/gradle/wrapper/: gradle-wrapper.properties
fisheye_processing/: fisheye_processing.pde
fisheye_python/: fisheye.py  fisheye_TOO_SLOW.py
fisheye_qt/fisheye_qt/: CMakeLists.txt  deploy.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
fisheye_ruby/: fisheye_ALL_Ruby.rb  fisheye_clib.c  fisheye_ruby.rb
fisheye_rust/: Cargo.toml  index.html
fisheye_rust/src/: lib.rs
