[package]
name = "fisheye_rust"
version = "0.1.0"
authors = ["lipoyang"]
description = "魚眼変換"
license = "MIT/Apache-2.0"
repository = "https://github.com/lipoyang/fisheye_examples"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Event",
  "DomRect",
  "MouseEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
]
